fix(web): drop a not necessary z-index
Which was also causing stacking problems at the selection product page.

--- a/web/src/assets/styles/app.scss
+++ b/web/src/assets/styles/app.scss
@@ -62,7 +62,6 @@ button.remove-link:hover {
       right: 0;
       bottom: 0;
       left: 0;
-      z-index: 999;
     }
   }
 }
